<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Moniker</string>
    <string name="title_activity_play_game">PlayGame</string>
    <string name="title_activity_pre_game">PreGame</string>
    <string name="title_activity_screen_ready">Screen_Ready</string>
    <string name="title_activity_screen_end">Screen_End</string>
    <string name="title_activity_screen_rounds">Screen_Rounds</string>
    <string name="title_activity_screen_options">Screen_Options</string>
    <string name="title_activity_screen_cards">Screen_Cards</string>
    <string name="title_activity_screen_help">Screen_Help</string>
    <string name="title_activity_screen_update_cards">Screen_UpdateCards</string>
    <string name="title_pick_teams">Teams</string>
    <string name="title_team_start">Team Start!</string>
    <string name="title_updating">Updating Cards</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="title_options">Options</string>
    <string name="title_cards">Cards</string>
    <string name="title_help">Help</string>
    <string name="button_correct">Yay</string>
    <string name="button_incorrect">Boo</string>
    <string name="button_pass">Pass</string>
    <string name="game_word_title">Title</string>
    <string name="game_word_1">Word 1</string>
    <string name="game_word_2">Word 2</string>
    <string name="game_word_3">Word 3</string>
    <string name="game_word_4">Word 4</string>
    <string name="game_word_5">Word 5</string>
    <string name="button_pre_2">Two</string>
    <string name="button_pre_3">Three</string>
    <string name="button_pre_4">Four</string>
    <string name="button_ready_go">Go!</string>
    <string name="default_score">Score: 0</string>
    <string name="button_play_again">Play Again</string>
    <string name="button_menu">Menu</string>
    <string name="title_rounds">Rounds</string>
    <string name="button_rounds_plus">+</string>
    <string name="button_rounds_minus">-</string>
    <string name="button_rounds_start">03</string>
    <string name="rounds_default_number">03</string>
    <string name="round_timer_default_number">60</string>
    <string name="updating_text">Updating Cards...</string>
    <string name="title_activity_screen__cards__settings">Screen_Cards_Settings</string>

    <!-- Strings related to shared preferences -->
    <string name="sp_rangebar_index_left">sp_rangebar_index_left</string>
    <string name="sp_rangebar_index_right">sp_rangebar_index_right</string>
    <string name="sp_options_round_timer">sp_options_round_timer</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
