<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Screen_Team"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/TeamButtonContainer"
        android:weightSum="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_pick_teams"
            android:id="@+id/Teams"
            android:editable="false"
            android:textSize="50sp"
            android:paddingBottom="50dp"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingTop="50dp"
            android:layout_marginBottom="50dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_pre_2"
            android:id="@+id/Pre_Start_2_Teams"
            android:enabled="true"
            android:layout_gravity="center"
            android:onClick="TwoTeams"
            android:textSize="40sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_pre_3"
            android:id="@+id/Pre_Start_3_Teams"
            android:enabled="true"
            android:layout_gravity="center"
            android:onClick="ThreeTeams"
            android:textSize="40sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_pre_4"
            android:id="@+id/Pre_Start_4_Teams"
            android:enabled="true"
            android:layout_gravity="center"
            android:onClick="FourTeams"
            android:textSize="40sp" />

    </LinearLayout>
</RelativeLayout>
