<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Screen_Rounds">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:baselineAligned="false" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_rounds"
            android:id="@+id/RoundsTitle"
            android:editable="false"
            android:textSize="50sp"
            android:paddingBottom="50dp"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:layout_marginBottom="50dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingTop="50dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/RoundPicker"
            android:layout_marginBottom="50dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_rounds_minus"
                android:id="@+id/Minus"
                android:layout_gravity="center"
                android:enabled="true"
                android:textColor="@color/primary_text_default_material_dark"
                android:textSize="40sp"
                android:onClick="Minus"
                android:gravity="center"
                android:layout_marginRight="10dp"
                android:nestedScrollingEnabled="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rounds_default_number"
                android:id="@+id/Rounds"
                android:editable="false"
                android:textStyle="bold"
                android:textIsSelectable="false"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:numeric="integer"
                android:focusableInTouchMode="false" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_rounds_plus"
                android:id="@+id/Plus"
                android:layout_gravity="center"
                android:enabled="true"
                android:textColor="@color/primary_text_default_material_dark"
                android:textSize="40sp"
                android:onClick="Plus"
                android:gravity="center"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:id="@+id/Start"
            android:layout_gravity="center_horizontal"
            android:enabled="true"
            android:textColor="@color/primary_text_default_material_dark"
            android:textSize="40sp"
            android:onClick="StartGame" />

    </LinearLayout>
</RelativeLayout>
