<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16px"
    android:paddingRight="16px"
    android:paddingTop="16px"
    android:paddingBottom="16px"
    tools:context=".Screen_Main">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

                <!-- Your regular UI here -->
                <LinearLayout
                    android:id="@+id/MainLinearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:orientation="vertical"
                    android:baselineAligned="false">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:id="@+id/Title"
                        android:editable="false"
                        android:textSize="50sp"
                        android:paddingBottom="50dp"
                        android:textStyle="bold"
                        android:textIsSelectable="false"
                        android:layout_marginBottom="50dp"
                        android:gravity="center"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:paddingTop="50dp" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_start"
                        android:id="@+id/Start"
                        android:layout_gravity="center_horizontal"
                        android:enabled="true"
                        android:textColor="@color/primary_text_default_material_dark"
                        android:textSize="40sp"
                        android:onClick="Start_Pregame" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_options"
                        android:id="@+id/Options"
                        android:layout_gravity="center_horizontal"
                        android:enabled="true"
                        android:textColor="@color/primary_text_default_material_dark"
                        android:textSize="40sp"
                        android:onClick="Start_Options" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_cards"
                        android:id="@+id/Cards"
                        android:layout_gravity="center_horizontal"
                        android:enabled="true"
                        android:textColor="@color/primary_text_default_material_dark"
                        android:textSize="40sp"
                        android:onClick="Start_Cards" />

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_help"
                        android:id="@+id/Help"
                        android:layout_gravity="center_horizontal"
                        android:enabled="true"
                        android:textColor="@color/primary_text_default_material_dark"
                        android:textSize="40sp"
                        android:onClick="Start_Help"
                        android:visibility="gone"/>

                </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativelayout_progress"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="gone">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/updating_text"
                android:id="@+id/UpdatingText"
                android:editable="false"
                android:textSize="50sp"
                android:paddingTop="50dp"
                android:paddingBottom="50dp"
                android:textIsSelectable="false"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <ProgressBar
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateOnly="true"
                android:minHeight="100dip"
                android:minWidth="100dip"
            />

        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>
