<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Screen_End">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout2"
        android:weightSum="1" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_pick_teams"
            android:id="@+id/WinningTeam"
            android:editable="false"
            android:textSize="50sp"
            android:paddingBottom="50dp"
            android:textStyle="bold"
            android:textIsSelectable="false"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:paddingTop="50dp"
            android:layout_marginBottom="50dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/StatsContainer">

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ButtonContainer" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_play_again"
                android:id="@+id/PlayAgain"
                android:enabled="true"
                android:layout_gravity="center"
                android:onClick="PlayAgain"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_menu"
                android:id="@+id/Menu"
                android:enabled="true"
                android:layout_gravity="center"
                android:onClick="Menu"
                android:textSize="40sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
